# podcast_rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  mcp-implementation-plan.md  pyproject.toml
data/: .gitignore
mcp-client/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
mcp-client/src/: auth.ts  index.ts
scripts/: generate_keys.py  transcribe_url.py
src/audio_scrap/: main.py
src/embed/: main.py
src/query/: main.py  prefix.py
src/rag_mcp/: __init__.py  episode_info.py  main.py
src/stats/: __init__.py  main.py
